# Benton-Drones-Lead-Ingest

./: .dockerignore  .gitignore  Dockerfile  Makefile  README.md  index.html  pyproject.toml  railway.json  render.yaml  requirements.txt
.code_puppy/: README.md
benton_drones_lead_ingest.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
deploy/: Caddyfile  README.md  nginx.conf
docs/: api-cli-automation-preflight.md  architecture-diagram.html  current-state-and-next-steps.md  design-system-preflight.md  domain-dns-cloudflare-preflight.md  explainer-guide.html  friend-guide.html  hosting-guide.md  manual-platform-setup-walkthrough.md  production-readiness-review.md  railway-deployment-guide.md  render-deployment-guide.md  shopify-integration-plan.md  shopify-long-term-integration-recommendation.md  training-guide.html  wiggum-loop-report.md  workflow-modernization-plan.md
goals/: README.md  backend-deployment-goal.md  bds-dolt-tracking-goal.md  browser-qa-goal.md  design-system-capture-goal.md  domain-dns-cloudflare-goal.md  google-workspace-email-auth-goal.md  lead-ingest-local-mvp.md  namecheap-preflight-goal.md  production-hardening-goal.md  readonly-preflight-scripts-goal.md  shopify-app-proxy-future-goal.md  shopify-landing-page-goal.md
judges/: README.md  backend-deployment-judge.md  bds-dolt-tracking-judge.md  browser-qa-judge.md  design-system-capture-judge.md  domain-dns-cloudflare-judge.md  google-workspace-email-auth-judge.md  local-mvp-judge.md  namecheap-preflight-judge.md  production-hardening-judge.md  readonly-preflight-scripts-judge.md  (+2 more)
(+74 files in other folders)
