[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "benton-drones-lead-ingest"
version = "0.2.0"
description = "Local-first Shopify-aware lead ingest MVP for Benton Drones"
requires-python = ">=3.11"
license = { text = "MIT" }
# Core: no required dependencies — stdlib + sqlite3 only.
dependencies = []

[project.optional-dependencies]
pdf = ["fpdf2>=2.8.0"]
dev = ["fpdf2>=2.8.0"]

[tool.setuptools]
packages = ["lead_ingest", "scripts"]
